---

* [Bug 3856] Enable Edit & Continue debugging with Visual Studio.
             <hart@ntp.org>
* [Bug 3853] Clean up warnings with modern compilers. <hart@ntp.org>
* [Bug 3852] check-libntp.mf and friends are not triggering rebuilds as
             intended. <hart@ntp.org>
* [Bug 3851] Drop pool server when no local address can reach it.
             <hart@ntp.org>
* [Bug 3850] ntpq -c apeers breaks column formatting s2 w/refclock refid.
             <hart@ntp.org>
* [Bug 3849] ntpd --wait-sync times out. <hart@ntp.org>
* [Bug 3846] Use -Wno-format-truncation by default. <hart@ntp.org>
* [Bug 3845] accelerate pool clock_sync when IPv6 has only link-local access.
             <hart@ntp.org>
* [Bug 3842] Windows ntpd ppsapi DLL load failure crashes. <hart@ntp.org>
* [Bug 3841] 4.2.8p17 build break w/ gcc 12 -Wformat-security without -Wformat
             Need to remove --Wformat-security when removing -Wformat to
             silence numerous libopts warnings.  <hart@ntp.org>
* [Bug 3837] NULL pointer deref crash when ntpd deletes last interface.
             Reported by renmingshuai.  Correct UNLINK_EXPR_SLIST() when the
             list is empty. <hart@ntp.org>
* [Bug 3835] NTP_HARD_*FLAGS not used by libevent tearoff. <hart@ntp.org>
* [Bug 3831] pollskewlist zeroed on runtime configuration. <hart@ntp.org>
* [Bug 3830] configure libevent check intersperses output with answer. <stenn@>
* [Bug 3828] BK should ignore a git repo in the same directory.
             <burnicki@ntp.org>
* [Bug 3827] Fix build in case CLOCK_HOPF6021 or CLOCK_WHARTON_400A
             is disabled.  <burnicki@ntp.org>
* [Bug 3825] Don't touch HTML files unless building inside a BK repo.
             Fix the script checkHtmlFileDates.  <burnicki@ntp.org>
* html/clockopt.html cleanup.  <stenn@ntp.org>
* Add DSA, DSA-SHA, and SHA to tests/libntp/digests.c. <hart@ntp.org>

---
(4.2.8p17) 2023/06/06 Released by Harlan Stenn <stenn@ntp.org>
